centered main nav text and fixed flex spacing

--- a/components/scss/partials/_header.scss
+++ b/components/scss/partials/_header.scss
@@ -6,7 +6,7 @@
 
 ul#primary-menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 .site-logo {
@@ -19,9 +19,19 @@ ul#primary-menu {
 
 	li {
 	    border-right: 2px solid $teal;
+	    display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 0 10px;
+		text-align: center;
+		flex: 1;
+	}
+	li:last-child {
+		border-right: none;
 	}
 
 }
+
 .menu-top-nav-container {
     height: 100%;
 }
